--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-4/int08-2-4.component.html
@@ -1,25 +1,22 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
+
+  <!-- form 1 -->
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดหัวกระดาษทำการ</span>
+      <span>รายละเอียดหัวกระดาษทำการ{{riskAssRiskInfHdr.riskAssInfHdrName}}</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ชื่อกระดาษทำการ</label>
           </div>
           <div class="ten wide field ">
-            <input type="text" placeholder="ชื่อกระดาษทำการ" class="custom" name="riskInfPaperName" id="riskInfPaperName"
-              [(ngModel)]="riskAssRiskInfHdr.riskInfPaperName">
+            <input type="text" placeholder="ชื่อกระดาษทำการ" class="custom" name="riskInfPaperName" id="riskInfPaperName" [(ngModel)]="riskAssRiskInfHdr.riskInfPaperName">
           </div>
-
-        </div>
-        <div class="inline fields">
-          <div class="two wide field "></div>
-          <div class="two wide field required">
+          <div class="one wide field required">
             <label class="text-right full-width">ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
@@ -28,97 +25,88 @@
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้จัดทำ : ชื่อ </label>
           </div>
           <div class="two wide field ">
             <div class="ui input">
               <select class="ui dropdown ai selection" style="width: 100%;" id="createUserTitle" [(ngModel)]="riskAssRiskInfHdr.createUserTitle">
-                <option value="00">เลือก</option>
+                <option value="00">กรุณาเลือก</option>
                 <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName"
-              [(ngModel)]="riskAssRiskInfHdr.createUserName">
+          <div class="three wide field ">
+            <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName" [(ngModel)]="riskAssRiskInfHdr.createUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName"
-              [(ngModel)]="riskAssRiskInfHdr.createLastName">
+          <div class="three wide field ">
+            <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName" [(ngModel)]="riskAssRiskInfHdr.createLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition"
-              [(ngModel)]="riskAssRiskInfHdr.createPosition">
+          <div class="four wide field ">
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition" [(ngModel)]="riskAssRiskInfHdr.createPosition">
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้ตรวจ : ชื่อ </label>
           </div>
           <div class="two wide field ">
             <div class="ui input">
               <select class="ui dropdown ai selection" style="width: 100%;" id="checkUserTitle" [(ngModel)]="riskAssRiskInfHdr.checkUserTitle">
-                <option value="00">เลือก</option>
+                <option value="00">กรุณาเลือก</option>
                 <option *ngFor="let data of titleList" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
               </select>
             </div>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName"
-              [(ngModel)]="riskAssRiskInfHdr.checkUserName">
+          <div class="three wide field ">
+            <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName" [(ngModel)]="riskAssRiskInfHdr.checkUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="นามสกุล" class="custom" name="checkLastName" id="checkLastName" [(ngModel)]="riskAssRiskInfHdr.checkLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
-            <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled
-              [(ngModel)]="riskAssRiskInfHdr.checkPosition">
+          <div class="four wide field ">
+            <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled [(ngModel)]="riskAssRiskInfHdr.checkPosition">
           </div>
         </div>
-
-        <div class="inline fields"></div>
-
       </div>
     </div>
   </div>
-
+  </div>
+  <br>
+<!-- form 2 -->
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>เพิ่มข้อมูลกระดาษทำการ</span>
+      <span>เพิ่มข้อมูลกระดาษทำการ{{riskAssRiskInfHdr.riskAssInfHdrName}}</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
-
         <div class="ui top attached tabular menu">
           <a class="item active" data-tab="first">เพิ่มข้อมูล</a>
           <a class="item " data-tab="second">เพิ่มข้อมูล Excel File</a>
         </div>
 
-        <div class="ui bottom attached tab segment active" data-tab="first">
+<!-- insert form 1 -->
+        <div class="ui bottom attached active tab segment" data-tab="first">
           <div class="inline fields">
-            <div class="two wide field "></div>
-            <div class="two wide field">
-              <label>ชื่อระบบสารสนเทศ</label>
+            <div class="three wide field required">
+              <label class="text-right full-width">ชื่อระบบสารสนเทศ</label>
             </div>
-            <div class="four wide field ">
+            <div class="six wide field ">
               <input type="text" placeholder="ชื่อระบบสารสนเทศ" class="custom" name="infName" id="infName" [(ngModel)]="infName">
             </div>
-            <div class="two wide field ">
+            <div class="two wide field required">
               <label class="text-right full-width">ค่าความเสี่ยง</label>
             </div>
             <div class="four wide field ">
@@ -126,9 +114,8 @@
             </div>
           </div>
           <br>
-          <div class="inline fields">
-            <div class="sixteen wide field ">
-              <div class="seven wide field "></div>
+          <div class="ui center aligned grid">
+            <div class="four wide column ">
               <button class="ui mini green button" (click)="addObjRiskDtl() ">
                 <i class="plus icon"></i>
                 เพิ่ม
@@ -137,6 +124,7 @@
           </div>
         </div>
 
+<!-- insert form 2 -->
         <div class="ui bottom attached tab segment " data-tab="second">
           <form id="upload-form" ngNativeValidate (submit)="onUpload($event)">
             <div class="ui attached segment">
@@ -154,7 +142,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="ui center aligned grid">
                 <div class="four wide column">
                   <button class="ui mini yellow button" type="submit">
@@ -170,20 +157,19 @@
             </div>
           </form>
         </div>
-
+  <!-- table -->
         <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
           <thead>
             <tr>
-              <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-              <th rowspan="2" style="text-align: center !important" class="ten wide field ">ระบบสารสนเทศฯ
-                ของกรมสรรพสามิต</th>
+              <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
+              <th rowspan="2" style="text-align: center !important" class="ten wide field ">ระบบสารสนเทศฯ ของกรมสรรพสามิต</th>
               <th rowspan="2" style="text-align: center !important" class="two wide field ">ค่าความเสี่ยง</th>
               <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
-              <th rowspan="2" style="text-align: center !important">ลบ</th>
+              <!-- <th rowspan="2" style="text-align: center !important">ลบ</th> -->
             </tr>
             <tr>
-              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
-              <th style="text-align: center !important">แปลค่า</th>
+              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">อัตราความเสี่ยง</th>
+              <th style="text-align: center !important">แปลค่าความเสี่ยง</th>
             </tr>
           </thead>
         </table>
@@ -209,25 +195,20 @@
               ยกเลิก
             </button>
           </div>
-
         </div>
-
       </div>
     </div>
   </div>
 
+<!-- form condition -->
   <div class="sixteen wide column" *ngIf="getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยง{{riskAssRiskInfHdr.riskAssInfHdrName}}</span>
     </div>
-
     <div class="ui attached segment">
       <div class="ui form">
         <condition [riskId]="id" [riskType]="'OTHER'" [page]="'int08-2-4'" (out)="closeConditionRL($event)"></condition>
       </div>
       <br />
-
     </div>
   </div>
-
-</div>
